--- a/vue/package.json
+++ b/vue/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.2",
     "dayjs": "^1.8.23",
     "element-ui": "^2.13.0",
+    "html2canvas": "^1.0.0-rc.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.3"
